--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
 	text-align: center;
 }
 
+div.turntables-container {
+	width: 1920px;
+}
+
 ul {
 	list-style-type: none;
 	padding: 0;
@@ -39,7 +43,8 @@ li.movie.playing {
 
 #holizontal-slider {
 	margin-top: 60px;
-	margin-left: 650px;
+	margin-left: auto;
+	margin-right: auto;
 	width: 600px;
 	background: #ddd;
 }
