--- a/style.css
+++ b/style.css
@@ -3,8 +3,30 @@ body {
 }
 
 div.turntables-container {
-	width: 1920px;
+	width: 1350px;
+	height: 500px;
 }
+
+div.vertical-sliders-container {
+	width: 500px;
+	height: 460px;
+	margin: 0 auto;
+}
+
+p.vertical-slider {
+	height: 400px !important;
+	padding: 0;
+	display: inline-block;
+}
+
+p#vertical-slider1 {
+	float: left;
+}
+
+p#vertical-slider2 {
+	float: right;
+}
+
 
 ul {
 	list-style-type: none;
@@ -35,16 +57,9 @@ li.movie.playing {
 	margin-left: 18px
 }
 
-.vertical-slider {
-	height: 400px !important;
-	padding: 0;
-	margin-top: 60px;
-}
-
 #holizontal-slider {
 	margin-top: 60px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 	width: 600px;
 	background: #ddd;
 }
