--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ p#vertical-slider2 {
 	float: right;
 }
 
+div.list-container {
+	width: 1250px;
+	margin: 0 auto;
+}
 
 ul {
 	list-style-type: none;
@@ -38,6 +42,8 @@ li.movie {
 	float: left;
 	padding: 10px;
 	margin: 5px;
+	width: 190px;
+	height: 190px;
 }
 
 li.movie.on {
@@ -47,6 +53,11 @@ li.movie.on {
 
 li.movie.playing {
 	background-color: deeppink;
+}
+
+p.title {
+	height: 40px;
+	margin: 0;
 }
 
 .assign1-button {
